--- a/contactme.html
+++ b/contactme.html
@@ -6,6 +6,10 @@
     <title>Contact Me</title>
 </head>
 <body>
-    
+    <h2>My Contact Details</h2>
+    <p># 40 Accra Street, Wuse Zone 5 Abuja, Nigeria</p>
+    <p>+2348133126293</p>
+    <p>Etimbassey6318@gmail.com</p>
+    <hr>
 </body>
 </html>
