--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,12 @@
     <title>My Hobbies</title>
 </head>
 <body>
-    
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Investigative interests</li>
+        <li>Designing and Conducting Experiments</li>
+        <li> Working with plants, animals, and physical materials</li>
+        <hr>
+    </ul>
 </body>
 </html>
