--- a/index.html
+++ b/index.html
@@ -6,17 +6,57 @@
     <title>My Resume</title>
 </head>
 <body>
-    <h1>RESUME</h1>
-    <hr>
-    <h1>Summary</h1>
+    <h1>Etim Bassey</h1>
+    <img src="./images/etim.jpg" alt="Paasport of Etim Bassey">
+    <h2>Summary</h2>
     <p>Innovative Biochemist with a background in metabolic engineering and genomics. 
         Skilled in developing new methodologies, <br>processes, and analytical tools. 
         Accomplished Biochemist with a Master's degree in Biochemistry and experience 
         in cell culture. <br> Experienced in setting up laboratory experiments and analyzing results.</p>
-    <h1>Education</h1>
-    <h1>Work experience</h1>
-    <h1>Skills</h1>
-    <h1>Awards/Certifications</h1>
+    <hr>
+    <h2>Education</h2>
+    <ul>
+        <li>Bachelor of Science, Biochemistry-Cross Rivers State University</li>
+    </ul>
+    <hr>
+    <h2>Work experience</h2>
+    <ul>
+        <h3>
+            <li>Customer Service Representative-Daddy's Kitchen, Calabar</li>
+        </h3>
+        <p>January 2021-January 2023</p>
+        <li>Store Keeper</li>
+        <li>Chef</li>
+        <li>Waiter</li>
+
+        <h3>
+            <li>Administrative Assistant-Vines Laundry and Dry cleaning, Calabar</li>
+        </h3>
+        <p>February 2023-January 2024</p>
+        <li>Assisted with scheduling appointments and meetings</li>
+        <li>Assisted with supervising of laundry department </li>
+        <li>Assisted with record keeping</li>
+    </ul>
+    <hr>
+    <h2>Skills</h2>
+    <ul>
+        <li>Analytical skills.</li>
+        <li>Communication skills</li>
+        <li>Critical-thinking skills</li>
+        <li>Interpersonal skills</li>
+        <li>Microsoft Excel</li>
+    </ul>
+    <hr>
+    <h2>Awards & Certifications</h2>
+    <ul>
+        <li>Frontend Web Develop-Udemy.</li>
+    </ul>
+    <hr>
+    <h2>Others</h2>
+    <ul>
+        <li><a href="hobbies.html" target="_blank">My Hobbies</a></li>
+        <li><a href="contactme.html" target="_blank">Contact Me</a></li>
+    </ul>
 
     <footer>
         <p>© 2024 Etim</p>
