--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </ul>
 
     <footer>
-        <p>© 2024 Etim</p>
+        <p>© 2024 Etim Bassey. All Rights Reserved</p>
       </footer>
 
 </body>
