--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Summary</h2>
     <p>Innovative Biochemist with a background in metabolic engineering and genomics. 
         Skilled in developing new methodologies, <br>processes, and analytical tools. 
-        Accomplished Biochemist with a Master's degree in Biochemistry and experience 
+        Accomplished Biochemist with a degree in Biochemistry and experience 
         in cell culture. <br> Experienced in setting up laboratory experiments and analyzing results.</p>
     <hr>
     <h2>Education</h2>
